# profile-peek

./: .dockerignore  .gitignore  .nvim.lua  Cargo.toml  Dockerfile  Makefile  devbox.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  dependabot-automerge.yaml
extension/: background.js  content-script.js  elm.json  manifest.json
extension/src/: API.elm  Components.elm  Main.elm
frontend/: README.md  elm-land.json  elm.json  package-lock.json  package.json
frontend/assets/: styles.css
frontend/src/Pages/: ALL_.elm  Home_.elm
shared/: elm.json
shared/src/: API.elm  Components.elm
src/: env.rs  faceit.rs  main.rs  redis.rs  steam.rs  tracking.rs
