[package]
name = "csportal-player-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rocket = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

