[package]
name = "csportal-player-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["blocking"] }
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
redis = "0.29.1"
r2d2 = "0.8.9"
r2d2_redis = "0.8.0"
lazy_static = "1.4.0"
